## Version 1.?

- fix auth check (prevent direct access to posts)
- add filter to allow overriding of Capsule's access restrictions (capsule_gatekeeper_enabled)
- remove persistent horizontal scrollbar from code blocks (now only appears when needed)
- add hooks in Capsule's controllers for extensibility (capsule_controller_action_get, capsule_controller_action_post)
- add before and after actions to post menu (capsule_post_menu_before, capsule_post_menu_after)
- add before and after actions to main nav (capsule_main_nav_before, capsule_main_nav_after)
- update WP permalinks when pretty premalinks are detected and our custom taxonomies are not present
- fix issues with syntax highlighting markdown emphasis in editor versus display
- fix double-encoding of ampersands on display
- fix fenced code blocks not being entity-encoded in some cases
- add favicon and icon for use with Fluid app
- add default styling for tables

## Version 1.0

- initial release